# RAG-System-Context-Engineering-and-Security

./: .gitignore  .gitignore.save  README.md  demo.sh  pyproject.toml  run.sh
app/: main.py  services.py
app/api/: chat.py  ingest.py
app/config/: settings.py
app/context/: builder.py  selector.py
app/generation/: answerer.py  prompting.py
app/ingestion/: chunker.py  file_loader.py  loaders.py  pdf_loader.py
app/integrations/: ollama_health.py
app/memory/: session_memory.py
app/models/: schemas.py
app/retrieval/: embeddings.py  retriever.py  vector_store.py
app/security/: injection_detector.py  policy.py  sanitizer.py
app/ui/: index.html
app/utils/: citations.py
knowledge_base/: README.md
secure_context_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_context_engineering.py  test_health_ollama.py  test_refusal_logic.py  test_security.py  test_sync_ingestion.py
