[project]
name = "secure-context-rag"
version = "0.1.0"
description = "Secure context-engineered RAG chatbot MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "numpy>=1.26.0",
  "httpx>=0.27.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.9",
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
